Connection to mongoose DB

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-URL = http://localhost:3001
+MONGO=mongodb+srv://mauriex:mauriex@cluster0.yfic9r0.mongodb.net/AniRoll?retryWrites=true&w=majority&appName=Cluster0
