NextAuth and Middleware error test

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MONGO=mongodb+srv://mauriex:mauriex@cluster0.yfic9r0.mongodb.net/AniRoll?retryWrites=true&w=majority&appName=Cluster0
+
+AUTH_SECRET = 2j/4E3ErXZszg23cJwTOkths6wouwaJmVoOJG1LOZgA=
+
+AUTH_URL = http://localhost:3000/api/auth
