--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.4.1",
     "next": "14.2.3",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.3",
     "react": "^18",
     "react-dom": "^18"
   },
