--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.3",
     "react": "^18",
+    "react-custom-roulette": "^1.4.1",
     "react-dom": "^18"
   },
   "devDependencies": {
