--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookies-next": "^4.2.1",
     "js-cookie": "^3.0.5",
     "mongoose": "^8.4.1",
     "next": "14.2.3",
